[gd_scene format=3 uid="uid://bm1rqqkjlmgt5"]

[ext_resource type="Script" uid="uid://48v2yicruac1" path="res://script/ui/next_level_menu.gd" id="1_caeon"]
[ext_resource type="Texture2D" uid="uid://dtakxc6nj1gxy" path="res://assets/custom/panels/pause_panel.png" id="1_ly8if"]
[ext_resource type="Texture2D" uid="uid://twbtvwrx2dv3" path="res://assets/custom/next_lvl_menu/next_exit_button.png" id="2_d2kc1"]
[ext_resource type="Texture2D" uid="uid://dc565g0dwtjmq" path="res://assets/custom/next_lvl_menu/restart_lvl_buton.png" id="3_d2kc1"]
[ext_resource type="Texture2D" uid="uid://da63004ecc1oi" path="res://assets/custom/next_lvl_menu/next_lvl_buton.png" id="4_v0l0t"]
[ext_resource type="Script" uid="uid://bnkcqc0ifq3yg" path="res://script/ui/points_label_final.gd" id="6_k783e"]
[ext_resource type="Texture2D" uid="uid://dm65sbf2txx8h" path="res://assets/custom/Star.png" id="7_dx8f3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v0l0t"]
texture = ExtResource("1_ly8if")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_caeon"]
texture = ExtResource("2_d2kc1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ly8if"]
texture = ExtResource("2_d2kc1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k783e"]
texture = ExtResource("3_d2kc1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d2kc1"]
texture = ExtResource("3_d2kc1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dx8f3"]
texture = ExtResource("4_v0l0t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wi8j1"]
texture = ExtResource("4_v0l0t")

[sub_resource type="AtlasTexture" id="AtlasTexture_wi8j1"]
atlas = ExtResource("7_dx8f3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prveo"]
atlas = ExtResource("7_dx8f3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnux7"]
atlas = ExtResource("7_dx8f3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_331e2"]
atlas = ExtResource("7_dx8f3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlakc"]
atlas = ExtResource("7_dx8f3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ediv"]
atlas = ExtResource("7_dx8f3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ybx"]
atlas = ExtResource("7_dx8f3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8afhf"]
atlas = ExtResource("7_dx8f3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c5up"]
atlas = ExtResource("7_dx8f3")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdtix"]
atlas = ExtResource("7_dx8f3")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj1qt"]
atlas = ExtResource("7_dx8f3")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pfli"]
atlas = ExtResource("7_dx8f3")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1kn1"]
atlas = ExtResource("7_dx8f3")
region = Rect2(384, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_twjiq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi8j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prveo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnux7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlakc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ediv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ybx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8afhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c5up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdtix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj1qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pfli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1kn1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="NextLevelMenu" type="Control" unique_id=1750376882]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_caeon")

[node name="Panel" type="Panel" parent="." unique_id=1783237763]
custom_minimum_size = Vector2(447.25, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v0l0t")

[node name="Exit" type="Button" parent="." unique_id=1876866381]
layout_mode = 0
offset_left = 302.0
offset_top = 285.0
offset_right = 491.0
offset_bottom = 372.0
theme_override_styles/normal = SubResource("StyleBoxTexture_caeon")
theme_override_styles/hover = SubResource("StyleBoxTexture_ly8if")

[node name="restart" type="Button" parent="." unique_id=1915993339]
layout_mode = 0
offset_left = 513.0
offset_top = 289.0
offset_right = 623.0
offset_bottom = 351.0
theme_override_styles/normal = SubResource("StyleBoxTexture_k783e")
theme_override_styles/hover = SubResource("StyleBoxTexture_d2kc1")

[node name="NextLevel" type="Button" parent="." unique_id=1737844600]
layout_mode = 0
offset_left = 640.0
offset_top = 289.0
offset_right = 750.0
offset_bottom = 351.0
theme_override_styles/normal = SubResource("StyleBoxTexture_dx8f3")
theme_override_styles/hover = SubResource("StyleBoxTexture_wi8j1")

[node name="PointsLabelFinal" type="Label" parent="." unique_id=1674792998]
layout_mode = 0
offset_left = 372.0
offset_top = 55.0
offset_right = 792.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(1, 0.19215687, 0, 1)
theme_override_font_sizes/font_size = 48
text = "00000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_k783e")

[node name="Star1" type="AnimatedSprite2D" parent="PointsLabelFinal" unique_id=163060162]
position = Vector2(89.25, 129)
scale = Vector2(4.9531255, 4.7500005)
sprite_frames = SubResource("SpriteFrames_twjiq")
autoplay = "default"
frame_progress = 0.7412047

[node name="Star2" type="AnimatedSprite2D" parent="PointsLabelFinal" unique_id=1234237821]
position = Vector2(213.25, 129)
scale = Vector2(4.9531255, 4.7500005)
sprite_frames = SubResource("SpriteFrames_twjiq")
autoplay = "default"
frame_progress = 0.13900909

[node name="Star3" type="AnimatedSprite2D" parent="PointsLabelFinal" unique_id=867299181]
position = Vector2(344.25, 129)
scale = Vector2(4.9531255, 4.7500005)
sprite_frames = SubResource("SpriteFrames_twjiq")
autoplay = "default"
frame_progress = 0.13900909

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
